--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Devel::LeakTrace::Fast version 0.01
+Devel::DTrace version 0.01
 
 INSTALLATION
 
@@ -15,7 +15,7 @@ None.
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2007, Andy Armstrong
+Copyright (C) 2008, Andy Armstrong
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
