--- a/Changes
+++ b/Changes
@@ -9,3 +9,10 @@ Revision history for Devel-DTrace
 0.03    2008-01-06
         Fixed core dump in case were CvGV of the current CV is null.
         Added dtperl interpreter.
+
+0.04    2008-01-07
+        Made it work on Mac OS perl 5.8.8.
+
+0.05    2008-01-07
+        Fixed eval double counting
+        Added tests
