--- a/Changes
+++ b/Changes
@@ -38,3 +38,9 @@ Revision history for Devel-DTrace
         now used to report subroutine returns. I think it might actually
         be valid now rather than working more or less by accident as it
         did previously.
+
+0.11    2008-07-22
+        Improved stack walk that finds sub name so that it crosses
+        stack chunk boundaries. It's unclear whether this ever happens
+        in practice given that we call it on the first OP after
+        subroutine entry.
